feat: [DJ-80] - Add login feature with JWT
* chore(properties): Replace properties files wih global env

* chore(ignore list): Add todo to gitignore

* feat: [DJ-129] - Create endpoint for login

* ci(quality): Change the name of the main branch

* chore(deps): Add dotenv dependency

* feat: [DJ-131] - Migrate to cookies for jwt

* fix: [DJ-80] - Create default role for user